Add underscore thousands separators to all YAML test files
- Update all numeric values over 999 to use underscore separators
- Improves readability and consistency with PolicyEngine standards
- Fixes CI test failures

--- a/policyengine_nz/tests/policy/baseline/test_acc_levy.yaml
+++ b/policyengine_nz/tests/policy/baseline/test_acc_levy.yaml
@@ -4,10 +4,9 @@
     people:
       person:
         age: 30
-        employment_income: 30000
+        employment_income: 30_000
   output:
-    acc_earners_levy:
-      2025: 501  # $30,000 * 1.67% = $501
+    acc_earners_levy: 501  # $30,000 * 1.67% = $501
 
 - name: ACC Earner's Levy on $60,000 employment income (2025)
   period: 2025
@@ -15,10 +14,9 @@
     people:
       person:
         age: 30
-        employment_income: 60000
+        employment_income: 60_000
   output:
-    acc_earners_levy:
-      2025: 1002  # $60,000 * 1.67% = $1,002
+    acc_earners_levy: 1_002  # $60,000 * 1.67% = $1,002
 
 - name: ACC Earner's Levy on $200,000 employment income (capped at $154,548)
   period: 2025
@@ -26,7 +24,6 @@
     people:
       person:
         age: 30
-        employment_income: 200000
+        employment_income: 200_000
   output:
-    acc_earners_levy:
-      2025: 2580.95  # $154,548 * 1.67% = $2,580.95 (capped)
+    acc_earners_levy: 2_580.95  # $154,548 * 1.67% = $2,580.95 (capped)
