--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ dev = [
     "black>=24.8.0",
     "linecheck>=0.1.0",
     "jupyter-book>=1.0.4",
+    "mystmd>=1.3.17",
     "wheel>=0.38.4",
     "build>=0.8.0",
     "setuptools>=61.0",
